test/files/neg/nonsense_eq_refine.check
nonsense_eq_refine.scala:6: warning: E and String are unrelated: they will most likely never compare equal
  if (e == "") ??? // warn about comparing unrelated types
        ^
nonsense_eq_refine.scala:9: warning: SE and String are unrelated: they will most likely never compare equal
  if (se == "") ??? // types are still unrelated
         ^
error: No warnings can be incurred under -Xfatal-warnings.
two warnings found
one error found
